src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Invalid/UnexpectedRoutingPrefix1/InvalidUnexpectedRoutingPrefix1.php
<?php

namespace Invalid\UnexpectedRoutingPrefix1;

use Claroline\PluginBundle\AbstractType\ClarolineExtension;

class InvalidUnexpectedRoutingPrefix1 extends ClarolineExtension
{
    public function getRoutingPrefix()
    {
        return array();
    }
}